# ai-usage-monitor

./: .gitignore  DESIGN.md  PRODUCT.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json  vite.config.ts
.github/workflows/: windows-build.yml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/adapters/openusage/: OpenUsageAdapter.ts
src/components/Countdown/: Countdown.tsx
src/components/ProviderCard/: ProviderCard.tsx
src/components/ProviderMark/: ProviderMark.tsx
src/components/ProviderTrend/: ProviderTrend.tsx
src/components/Skeleton/: Skeleton.tsx
src/components/StatusBadge/: StatusBadge.tsx
src/components/UsageProgress/: UsageProgress.tsx
src/demo/: demoUsage.ts
src/hooks/: useCountdown.ts  useProviderUsage.ts
src/pages/: Dashboard.tsx  DesignLab.tsx  ProviderDetails.tsx  Settings.tsx
src/providers/: base.ts  index.ts
src/providers/claude/: index.ts
src/providers/codex/: index.ts
src/providers/deepseek/: index.ts
src/providers/openai/: index.ts
src/services/: native.ts
src/types/: provider.ts
src/utils/: format.ts
