[package]
name = "ai-usage-monitor"
version = "0.1.1"
description = "Local-first AI usage monitor for Windows"
authors = ["AI Usage Monitor contributors"]
edition = "2021"

[lib]
name = "ai_usage_monitor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "ai-usage-monitor"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
dirs = "6"
keyring = { version = "3", features = ["windows-native"] }
log = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
tauri-plugin-log = "2"
walkdir = "2"
which = "8"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
